Modified CSS class to adjust padding and prevent overlap in the search bar

--- a/packages/mtd-mobile-ui/src/app/search/search.page.scss
+++ b/packages/mtd-mobile-ui/src/app/search/search.page.scss
@@ -6,10 +6,16 @@ h4 {
     margin-top: 3em;
 }
 
+/* Modified CSS class to adjust padding and prevent overlap in the search bar */
 #searchBar {
     width: 75%;
     margin: 2em auto;
-}
+    --padding-start: 10px;
+    --padding-end: 10px;
+    --padding-top: 8px;
+    --padding-bottom: 8px;
+    --icon-padding: 10px;
+  }
 
 ion-label {
     text-align: center;
